--- a/README
+++ b/README
@@ -2,6 +2,7 @@ My i3 config and i3 status bar
 
 after setup run this:
 ln -s ~/.i3/i3blocks ~/.config/i3blocks 
+chmod a+x ~/.i3/i3blocks/scripts/* 
 
 requires:
 ranger
