--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 My i3 config and i3 status bar
 
-after setup run this:
+sudo apt-get install i3
+sudo apt-get install i3status
+sudo apt-get install i3blocks
+
+after cloning this dir run:
 ln -s ~/.i3/i3blocks ~/.config/i3blocks
 chmod a+x ~/.i3/i3blocks/scripts/*
 
