--- a/README
+++ b/README
@@ -2,7 +2,8 @@ My i3 config and i3 status bar
 
 sudo apt-get install i3
 sudo apt-get install i3status
-sudo apt-get install i3blocks
+sudo apt-get install i3status
+sudo apt-get install i3lock
 
 after cloning this dir run:
 ln -s ~/.i3/i3blocks ~/.config/i3blocks
@@ -12,7 +13,7 @@ requires:
 ranger
 ipython
 
-Install font from:
+Install font awesome from:
 https://www.fontsquirrel.com/fonts/font-awesome
 unzip and put in : /usr/local/share/fonts/
 sudo fc-cache -fv
