--- a/README
+++ b/README
@@ -2,12 +2,11 @@ My i3 config and i3 status bar
 
 sudo apt-get install i3
 sudo apt-get install i3status
-sudo apt-get install i3status
 sudo apt-get install i3lock
 
 after cloning this dir run:
 ln -s ~/.i3/i3blocks ~/.config/i3blocks
-ln -s ~/.i3/ config/i3
+ln -s ~/.i3/ .config/i3
 chmod a+x ~/.i3/i3blocks/scripts/*
 
 Edit syslog file to change 4jane to name of your PC
