--- a/README
+++ b/README
@@ -12,6 +12,8 @@ ln -s ~/.i3/i3blocks ~/.config/i3blocks
 ln -s ~/.i3/ .config/i3
 chmod a+x ~/.i3/i3blocks/scripts/*
 
+sudo apt install lm-sensors
+
 Edit syslog file to change 4jane to name of your PC
 
 requires:
